--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     	</style>
     </head>
     <body>
-    	<iframe src="https://share.streamlit.io/rhzif/streamlit_test/main/task1.py#sous-l-encadrement-de-pr-soukaina-hadiri"
+    	<iframe src=""#https://share.streamlit.io/rhzif/streamlit_test/main/task1.py#sous-l-encadrement-de-pr-soukaina-hadiri"
     			frameborder="0"
     			marginheight="0"
     			marginwidth="0"
