--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <html>
     <head>
     	<title>Projet valorisation</title>
-     <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/RHZIF/streamlit_test/main/Fasticon-Hand-Draw-Iphone-Stocks.ico">
+     <link rel="icon" type="image/x-icon" href="https://github.com/Mido-Zaza/CFA_ENSA_AGADIR/blob/main/ensa.png">
     	<style type="text/css">
     		html {
     			overflow: auto;
