--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     	</style>
     </head>
     <body>
-    	<iframe src="https://github.com/Mido-Zaza/CFA_ENSA_AGADIR/blob/main/main.py" 
+    	<iframe src="https://share.streamlit.io/mido-zaza/cfa_ensa_agadir/main/main.py" 
     			frameborder="0"
     			marginheight="0"
     			marginwidth="0"
