--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
  <!DOCTYPE html>
     <html>
     <head>
-    	<title>Projet valorisation</title>
+    	<title>Valorisation Project</title>
      <link rel="icon" type="image/x-icon" href="https://github.com/Mido-Zaza/CFA_ENSA_AGADIR/blob/main/ensa.png">
     	<style type="text/css">
     		html {
@@ -33,7 +33,7 @@
     			width="100%"
     			height="100%"
     			scrolling="auto">
-      #https://share.streamlit.io/rhzif/streamlit_test/main/task1.py#sous-l-encadrement-de-pr-soukaina-hadiri
+     
     </iframe>
     </body>
     </html>
